# Final-Project_Cpp

./: CMakeLists.txt  main.cpp
include/models/: customer.hpp  staff.hpp
include/ui/: homepage.hpp
src/models/: customer.cpp  staff.cpp
src/ui/: homepage.cpp
